fix yihui/litedown#11: set the z-index of footnotes when they are moved into body, so they won't be covered by other elements such as <pre>

--- a/css/article.css
+++ b/css/article.css
@@ -103,6 +103,7 @@ body, blockquote, .side, .menu { background: #fafafa; }
     display: inline-block;
     background-color: #f8f8f8;
     position: absolute;
+    z-index: 1;
     margin-left: 1em;
     padding: .5em;
     box-sizing: content-box;
